# instagram-automation

./: clean.sh  pyproject.toml  requirements.txt
MD_Manager/: MDConfig.py  MDManager.py
base/: base.py
data_collectors/: FollowingUserDataCollector.py  MediaDataCollector.py  MediaDetailedDataCollector.py
log_handling/: log_handling.py
patterns/: Patterns.py  types.py
session_manager/: Session_Config.py  Session_Manager.py
