[tool.poetry]
name = "meta-hatewatch"
version = "0.1.0"
description = ""
authors = ["yasir"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
instagrapi = "*"
pillow = "*"
attributedict = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
